--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -4,6 +4,7 @@
       <th scope="col">ID</th>
       <th scope="col">Title</th>
       <th scope="col">Completed</th>
+      <th scope="col">Action</th>
     </tr>
   </thead>
   <tbody>
@@ -18,6 +19,9 @@
         [ngStyle]="{ color: item.completed ? 'yellow' : 'rgba(255,255,255,1)' }"
       >
         {{ item.completed ? "Completed" : "Incomplete" }}
+      </td>
+      <td>
+        <a class="btn btn-primary" (click)="onClickDetail(item)">Detail</a>
       </td>
     </tr>
   </tbody>
