--- a/src/app/pages/main/user/user-edit/user-edit.component.html
+++ b/src/app/pages/main/user/user-edit/user-edit.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="id.trim() != ''">
+<div *ngIf="id">
   <div class="mb-3">
     <label for="Title" class="form-label">Name</label>
     <input
@@ -34,7 +34,7 @@
     <select id="role" class="form-select" [(ngModel)]="role">
       <option value="" selected>Select User Role...</option>
       <option *ngFor="let item of roles | async" [value]="item.id">
-        {{ item.name }}
+        {{ item.roleName }}
       </option>
     </select>
   </div>
